--- a/serverless.yml
+++ b/serverless.yml
@@ -22,8 +22,8 @@ provider:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
 
 functions:
-  ocr:
-    handler: handler.ocr
+  getImageText:
+    handler: handler.getImageText
     events:
       - http:
           method: get
